kubernetes/Jenkins.yaml

apiVersion: v1
kind: Deployment 
metadata:
  name: jenkins-server  
  namespace: jenkins-namespace 
spec:
  selector:
    matchLabels:
      app: jenkins-internal-service 
  template:
    app: jenkins-server 
    containers:
      - name: jenkins-server 
        image: jenkins/jenkins:lts 
        ports:
          - name: httpport
            containerPort: 8080 

          - name: jnlpport 
            containerPort: 50000 

        resources:
          limits:
            cpu: "2Gi"
            memory: "1000Mi"  

        livenessProbe:
          httpGet:
            path: login/ 
            port: 8080 
          initialDelaySeconds: 10 
          periodSeconds: 20 
          timeoutSeconds: 10 
        
        VolumeMounts:
          - MountPath: /var/jenkins_home/ 
            name: jenkins-volume-storage 
    Volumes:
      - name: jenkins-volume-storage 
        PersistentVolumeClaim:  
          - name: jenkins-claim
