kubernetes/postgresql.yaml
apiVersion: apps/v1 
kind: StatefulSet

metadata:
  app: store-postgresql-database 
  namespace: store-namespace 

spec:
  template:
    metadata:
      app: postgres_application 
    
    spec:
      replicas: 3 
      containers:
        - name: postgresql_database 
          image: postgres
          ports:
            - containerPort: 5435 
          
          command: ["-p", "5435"]
          dnsPolicy: Default 
          hostNetwork: true  

          volumeMounts:
            - mountPath: PostgresDataVolume 
              path: var/lib/postgresql/data 

        volumes:
          name: PostgresDataVolume
          persistentVolumeClaim:
            claimName: persistent-postgres-claim
