kubernetes/rabbit.yaml
apiVersion: v1 
kind: StatefulSet
metadata:
  name: rabbitmq-server 
  namespace: rabbit-namespace 

spec:
  terminationGracePeriodSeconds: 10 
  serviceName: rabbitmq-internal-server 
  selector:
    matchLabels:
      app: rabbitmq-server

  template: 
    replicas: 3 
    app: rabbitmq_internal 
    containers:
      - name: rabbitmq_server 
        image: rabbitmq-3.9:management
        ports:
          - containerPort: 5672 
          - containerPort: 15672 

        MountVolumes:
          - MountPath: ./rabbitmq/rabbitmq.conf 
            name: RabbitmqConfiguration 

      livenessProbe:
        exec:
          command: ["rabbitmq-diangostics", "status", "--erlang-cookie", "$(RABBITMQ_ERLANG_COOKIE)"]
      resources:
        requests:
          cpu: "0.5"
          memory: "3Gi" 
        limits:
          cpu: "0.5"
          memory: "3Gi"

      initialDelaySeconds: 60 
      periodSeconds: 60 
      timeoutSeconds: 60 

      - env:
          name: NAMESPACE 
          valueFrom:
            fieldRef:
              - name: metadata.namespace 
          name: HOSTNAME 
          valueFrom:
            fieldRef:
              - name: metadata.name 
          name: RABBITMQ_ERLANG_COOKIE
          valueFrom:
            secretKeyRef:
              - name: RabbitmqSecrets 
                value: RABBITMQ_ERLANG_COOKIE
          name: RABBITMQ_USE_LONGNAME
          value: "true"
          name: RABBITMQ_NODENAME
          value: "rabbitmq@$(NODENAME).rabbitmq-internal.$(NAMESPACE).svc.cluster.local"
          name: NODE_NAME 
          fieldRef:
            - name: metadata.name 

    Volumes:
      - name: RabbitmqConfiguration 
        hostPath:
          path: ./rabbitmq/rabbitmq.conf
