kubernetes/nginx.yaml
apiVersion: v1 
kind: Service 

metadata: 
  name: store-nginx-server 
  namespace: ingress_namespace  # Ingress Namespace.

spec:
  selector:
    matchLabels:
      app: store_entrypoint

  template:
    metadata:
      labels:
        app: store-nginx-server 
        
    spec:
      volumes:
        - name: NginxConfiguration 
          hostPath:
            path: EmailService/nginx/nginx.conf 

      containers:
        - name: store-nginx-server 
          image: nginx:latest 
          ports:
            - targetPort: 80 
              port: 8000 
              protocol: TCP 

          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf 
              name: NginxConfiguration

          resources:  
            requests:
              memory: "1Gi"
            limits:
              memory: "1Gi" 
          
          dnsPolicy: Default 
          hostNetwork: true 
          restartPolicy: onFailure
