kubernetes/ingress.yaml

apiVersion: networking.k8s.io/v1beta1 
kind: Ingress 
metadata:
  name: ingress-store-network 
  namespace: ingress-namespace 
spec:
  type: NodePort 
  tls:
    - hosts:
      - store.com
    secretName: ingress-tls-secret
  rules:
    host: store.com # Domain For accessing Store Service...
    http:
      paths:
        path: "/s"
        pathType: "Prefix"
        backend: 
          serviceName: store-application-service  # Accessing Store Service from Outside...
          servicePort: 8010

    host: store.orders.com # Subdomain for accessing orders Service....
      http: 
        paths:
          path: "/o"  # Accessing Order Service From Outside...
          pathType: "Prefix"
          backend: 
            serviceName: order-application-service 
            servicePort: 8090
